...
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_event_waiting_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="400"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />
...
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout2">

                        <TextView
                            android:id="@+id/tv_event_accepted_ratio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="148/200"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />
...
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/tv_event_spots_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="52"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />
...
                android:text="Number of entrants to draw"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_number_to_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_radius"
                android:drawableStart="@drawable/ic_groups_24dp_000000_fill0_wght400_grad0_opsz24"
                android:drawablePadding="8dp"
...
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_max_entrants_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Maximum 52 entrants spots available"
                android:textColor="@color/text_tertiary"
                android:textSize="@dimen/text_size_body_small"
...

        </LinearLayout>


        <!--    draw button-->
        <TextView
            android:id="@+id/btn_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_sm"
            android:backgroundTint="@color/black"
...
