...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
...

                <EditText
                    android:id="@+id/et_create_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/et_create_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_geolocation_required"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/et_create_event_capacity"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/tv_registration_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_registration_start_Date"
                            app:layout_constraintTop_toTopOf="parent" />

...

                        <TextView
                            android:id="@+id/tv_registration_end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_registration_end_date"
                            app:layout_constraintTop_toTopOf="parent" />

...

                    <EditText
                        android:id="@+id/et_create_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

<!--                    <ImageView-->
<!--                        android:id="@+id/iv_event_poster"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
...

            <TextView
                android:id="@+id/btn_create_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
